# autopkg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  pyproject.toml  python_universal_tester.sh  requirements.txt
.github/ISSUE_TEMPLATE/: beta-bug-report.md  bug_report.md
.github/workflows/: requirements.txt
Code/: autopkg
Code/autopkglib/: AppPkgCreator.py  DmgMounter.py  MunkiImporter.py  PkgExtractor.py  PlistReader.py  URLDownloader.py  URLDownloaderPython.py  __init__.py  _version.py
Code/autopkglib/munkirepolibs/: AutoPkgLib.py
Code/autopkgserver/: launch2.py
Code/nuget/: README.md
Code/tests/: ReadMe.md  preferences.json  test_autopkg_other.py  test_autopkg_overrides.py  test_autopkg_recipes.py  test_autopkg_run.py  test_autopkglib.py  test_codesignatureverifier.py  test_munkiimporter.py  test_pkgcreator.py  test_plistreader.py  test_preferences.py  test_searchcmd.py  test_urldownloader.py
Scripts/: autopkg.ps1  make_new_release.py
