[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopkg"
dynamic = ["version"]
description = "Add your description here"
readme = "ReadMe.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.dynamic]
version = {attr = "autopkglib._version.__version__"}

[tool.setuptools]
package-dir = {"" = "Code"}
packages = ["autopkgcmd", "autopkglib", "autopkgserver", "nuget"]
