[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopkg"
dynamic = ["version"]
description = "Add your description here"
readme = "ReadMe.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "appdirs==1.4.4",
    "certifi==2025.10.5",
    "lxml==6.0.2",
    "PyYAML==6.0.3",
    "xattr==1.2.0; sys_platform == 'darwin' or sys_platform == 'linux'",
    "pyobjc-core==11.1; sys_platform == 'darwin'",
    "pyobjc-framework-CFNetwork==11.1; sys_platform == 'darwin'",
    "pyobjc-framework-LaunchServices==11.1; sys_platform == 'darwin'",
    "pyobjc-framework-OpenDirectory==11.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz==11.1; sys_platform == 'darwin'",
    "pyobjc-framework-Security==11.1; sys_platform == 'darwin'",
    "pyobjc-framework-SystemConfiguration==11.1; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "coverage>=7.0.0",
    "generateDS>=2.44.3; sys_platform == 'win32'",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.setuptools.dynamic]
version = {attr = "autopkglib._version.__version__"}

[tool.setuptools]
package-dir = {"" = "Code"}
packages = ["autopkgcmd", "autopkglib", "autopkgserver", "nuget"]

[tool.ruff]
line-length = 88
src = ["Code"]
extend-exclude = [
    "Code/nuget/generated/*",
]

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C90",  # mccabe
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
]
ignore = [
    "B904", # Within an `except` clause, raise exceptions with `raise ... from err`
    "E501", # line too long
]

[tool.ruff.lint.mccabe]
max-complexity = 65

[tool.ruff.lint.per-file-ignores]
"Code/tests/*" = [
    "B017", # Asserting blind exception
]
"Scripts/*.py" = [
    "E402", # module level import not at top of file
]

[tool.ruff.lint.isort]
known-third-party = ["appdirs", "certifi", "xattr"]

[tool.coverage.run]
omit = [
    "Code/nuget/generated/*",
    "*/test_*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
